# PowerGym_Collision

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-docs.yml
case_studies/power/: collision_test.csv
docs/: TESTING_REQUIREMENTS.md  impl_todo_2026_03_20.md
docs/design/: HERON_DATA_FLOW.md  HERON_EXECUTION_FLOW.md  HERON_FLOW_DIAGRAMS.md  event_driven_execution_guide.md  experiment_briefing.md
docs/images/: event_driven_scheduling.py  generate_figure.py
docs/paper/: submission_plan.md
docs/source/: conf.py  getting_started.md  glossary.md  index.rst  key_concepts.md  requirements.txt
examples/1. starter/: README.md  agents.py  case1.py  case2.py  env_physics.py  features.py
examples/2. core_abstractions/: README.md  actions_and_spaces.py  features_and_visibility.py  observations_and_state.py
examples/3. building_environments/: README.md  custom_heron_env.py  env_builder_patterns.py  simple_env_quickstart.py
examples/4. protocols_and_coordination/: README.md  custom_protocol.py  horizontal_state_sharing.py  vertical_action_decomposition.py
examples/5. training_algorithms/: README.md  policy_and_training.py  rllib_integration.py
examples/6. event_driven_simulation/: README.md  dual_mode_execution.py  tick_config_and_scheduling.py
examples/7. advanced_patterns/: README.md  custom_env_and_visibility.py  mixed_action_spaces.py
examples/notebooks/: action_passing_tutorial.ipynb  ctde_event_driven_tutorial.ipynb
heron/: __init__.py
heron/adaptors/: __init__.py  rllib.py  rllib_module_bridge.py  rllib_runner.py
heron/agents/: __init__.py  base.py  constants.py  coordinator_agent.py  field_agent.py  proxy_agent.py  system_agent.py
heron/core/: __init__.py  action.py  feature.py  observation.py  policies.py  state.py
heron/envs/: __init__.py  base.py  builder.py  simple.py
heron/messaging/: __init__.py  broker_base.py  channels.py  in_memory_broker.py  messages.py
heron/protocols/: __init__.py  base.py  horizontal.py  vertical.py
heron/scheduling/: __init__.py  analysis.py  event.py  schedule_config.py  (+1 more)
tests/: test_env_builder.py
(+161 files in other folders)
